--- a/webpack-build/package.json
+++ b/webpack-build/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^8.5.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "postcss-loader": "^2.1.5",
+    "style-loader": "^0.21.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^3.1.4"
   }
