--- a/webpack-build/package.json
+++ b/webpack-build/package.json
@@ -16,9 +16,17 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^3.6.0",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-router-dom": "^4.2.2"
   }
 }
