--- a/webpack-build/package.json
+++ b/webpack-build/package.json
@@ -21,6 +21,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.5",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
