--- a/webpack-build/package.json
+++ b/webpack-build/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "./node_modules/.bin/webpack-cli",
-    "watch": "./node_modules/.bin/webpack-cli --watch"
+    "build": "rimraf dist && webpack -p --config webpack.prod.config.js --progress --profile -- color"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +22,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.5",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.2",
