--- a/man_city/package.json
+++ b/man_city/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-ease": "^1.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-move": "^2.7.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
